--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use '@angular/material'   as mat;
+@use "./utils/scss/utils"  as *;
+@use "./utils/scss/flex"   as *;
+@use "./utils/scss/pad"    as *;
+@use "./utils/scss/sticky" as *;
+@use "./utils/scss/scroll" as *;
+@use "./utils/scss/theme"  as *;
 
 html {
   @include mat.theme((
@@ -15,5 +20,20 @@ html {
   ));
 }/* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+@include theme((
+  type: light,  
+  color:(
+    font: black,
+    background: white,
+    primary: rgb(7,71,166),
+    accent: rgb(255, 160, 45),
+    warn: rgb(212, 14, 0),
+  )
+));
+
+html, body { margin: 0; height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@include stickyStructure();
+@include padStructure(5px);
+@include flexStructure(5px);
