--- a/src/utils/scss/theme.scss
+++ b/src/utils/scss/theme.scss
@@ -1,6 +1,8 @@
 @use "sass:math";
+@use "sass:map";
+@use "sass:color";
 @use "@angular/material" as mat;
-@import './utils.scss';
+@use './utils' as *;
 
  
 $values: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900, A100, A200, A400, A700);
@@ -11,28 +13,28 @@ $values: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900, A100, A200, A400, A70
   $baseDark: multiply($color, $color);
  
   $palette: (
-    50 : mix($color, $white, 12%),
-    100 : mix($color, $white, 30%),
-    200 : mix($color, $white, 50%),
-    300 : mix($color, $white, 70%),
-    400 : mix($color, $white, 85%),
-    500 : mix($color, $white, 100%),
-    600 : mix($color, $baseDark, 87%),
-    700 : mix($color, $baseDark, 70%),
-    800 : mix($color, $baseDark, 54%),
-    900 : mix($color, $baseDark, 25%),
-    A100 : lighten(saturate(mix($black, $baseDark, 15%), 80%), 65%),
-    A200 : lighten(saturate(mix($black, $baseDark, 15%), 80%), 55%),
-    A400 : lighten(saturate(mix($black, $baseDark, 15%), 100%), 45%),
-    A700 : lighten(saturate(mix($black, $baseDark, 15%), 100%), 40%)
+    50 : color.mix($color, $white, 12%),
+    100 : color.mix($color, $white, 30%),
+    200 : color.mix($color, $white, 50%),
+    300 : color.mix($color, $white, 70%),
+    400 : color.mix($color, $white, 85%),
+    500 : color.mix($color, $white, 100%),
+    600 : color.mix($color, $baseDark, 87%),
+    700 : color.mix($color, $baseDark, 70%),
+    800 : color.mix($color, $baseDark, 54%),
+    900 : color.mix($color, $baseDark, 25%),
+    A100 : color.scale(color.adjust(color.mix($black, $baseDark, 15%), $saturation: 80%), $lightness: 65%),
+    A200 : color.scale(color.adjust(color.mix($black, $baseDark, 15%), $saturation: 80%), $lightness: 55%),
+    A400 : color.scale(color.adjust(color.mix($black, $baseDark, 15%), $saturation: 100%), $lightness: 45%),
+    A700 : color.scale(color.adjust(color.mix($black, $baseDark, 15%), $saturation: 100%), $lightness: 40%)
   );
  
   $contrast: ();
   @each $v in $values {
-    $contrast: map-merge($contrast, ($v: getContrast(map_get($palette, $v))))
+    $contrast: map.merge($contrast, ($v: getContrast(map.get($palette, $v))))
   }
  
-  $palette: map-merge($palette, (contrast: $contrast));
+  $palette: map.merge($palette, (contrast: $contrast));
  
   @return $palette;
 }
@@ -48,17 +50,20 @@ $values: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900, A100, A200, A400, A70
   ),
   density: 0,
 )) {
+  $background: map.get($theme, color, background);
+  $primary: map.get($theme, color, primary);
+  $accent: map.get($theme, color, accent);
+  $warn: map.get($theme, color, warn);
+  $font: map.get($theme, color, font);
+  $primary-palette: createPalette($primary);
+  $accent-palette: createPalette($accent);
+  $warn-palette: createPalette($warn);
+
   html {
     body {
       transition: background 0.3s;
 
-      &.#{get($theme, type)} {
-        /* Variaveis SCSS */
-        $background: get($theme, color, background);
-        $primary: get($theme, color, primary);
-        $accent: get($theme, color, accent);
-        $warn: get($theme, color, warn);
-        $font: get($theme, color, font);
+      &.#{map.get($theme, type)} {
         /* Variaveis CSS */
         @include property(background, '<color>', false, $background);
         @include property(primary, '<color>', false, $primary);
@@ -66,17 +71,12 @@ $values: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900, A100, A200, A400, A70
         @include property(warn, '<color>', false, $warn);
         @include property(font, '<color>', false, $font);
         /* Paleta */
-        $primary-palette: createPalette($primary);
-        $accent-palette: createPalette($accent);
-        $warn-palette: createPalette($warn);
-
         @if isLight($primary) {
-          @include property(primary-font, '<color>', false, black);
+          @include property(primary-font, '<color>', false, #000);
         }
         @else{
-          @include property(primary-font, '<color>', false, white);
+          @include property(primary-font, '<color>', false, #fff);
         }
-
 
         // $angularTheme: null;
         // @if isLight(get($theme, color, background)){
@@ -105,8 +105,10 @@ $values: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900, A100, A200, A400, A70
         // }
         // @include mat.all-component-colors($angularTheme);
 
-        color: get($theme, color, font);
-        background: get($theme, color, background);
+        & {
+          color: map.get($theme, color, font);
+          background: map.get($theme, color, background);
+        }
 
         mat-icon{
           display: flex;
