Começando a criar o modal e aplicando tema.

--- a/src/app/components/lote/modal/lote-modal/lote-modal.component.html
+++ b/src/app/components/lote/modal/lote-modal/lote-modal.component.html
@@ -1,1 +1,6 @@
-<p>lote-modal works!</p>
+<div class="modal-overlay">
+  <div class="modal-container">
+    <button class="close-button" (click)="close()">×</button>
+    <div #modalContent></div>
+  </div>
+</div>
