--- a/src/app/components/lote/modal/lote-modal/lote-modal.component.scss
+++ b/src/app/components/lote/modal/lote-modal/lote-modal.component.scss
@@ -1,4 +1,16 @@
+@use "../../../../../utils/scss/utils" as *;
+@use "sass:color";
+
 @mixin modal($theme){
+  $type: get($theme, type);
+  $primary: get($theme, color, primary, 50);
+  $secondary: get($theme, color, primary, secondary, 50);
+
+  $background: if($type == light, black, white);
+  $font: if($type == light, white, black);
+
+  $radius: 10px;
+
   .modal-overlay {
     position: fixed;
     top: 0;
@@ -11,15 +23,49 @@
     justify-content: center;
     z-index: 1000;
   }
-  
+  // outline: 4px solid $secondary;
   .modal-container {
-    background: $theme;
+
+    background: $background;
+    color: $font;
     padding: 20px;
-    border-radius: 4px;
+    border-radius: $radius;
     min-width: 300px;
     max-width: 90%;
     max-height: 90vh;
-    overflow-y: auto;
+
+    position: relative;
+
+    &::after, &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      box-sizing: border-box;
+      pointer-events: none;
+    }
+
+    &::after {
+      $padding: 6px;
+      top: calc($padding / 2);
+      left: calc($padding / 2);
+      width: calc(100% - $padding);
+      height: calc(100% - $padding);
+
+      border-radius: $radius;
+      border: 2px solid $primary;
+    }
+
+    &::before {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+
+      border-radius: $radius;
+      border: 20px solid $secondary;
+      filter: blur(14px);
+    }
   }
   
   .hidden {
