--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,16 +29,33 @@ html {
 
   // @debug $material;
 
-  @include mat.theme((
-    color: (
-      theme-type: dark,
-      primary: get($material, primary),
-      tertiary: get($material, tertiary),
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
-  // @include lote-theme($theme);
+  body {
+    &.dark {
+      @include mat.theme((
+        color: (
+          theme-type: dark,
+          primary: get($material, primary),
+          tertiary: get($material, tertiary),
+        ),
+        typography: Roboto,
+        density: 0,
+      ));
+      @include lote-theme($theme);
+    }
+    &.light {
+      @include mat.theme((
+        color: (
+          theme-type: light,
+          primary: get($material, primary),
+          tertiary: get($material, tertiary),
+        ),
+        typography: Roboto,
+        density: 0,
+      ));
+      @include lote-theme($theme);
+    }
+  }
+
 }
 
 html, body { margin: 0; height: 100%; }
