--- a/src/utils/scss/color.scss
+++ b/src/utils/scss/color.scss
@@ -5,13 +5,13 @@
 @use "utils" as *;
 @use "math" as *;
 
-/* 
- * Função que mistura múltiplas cores
- * @param {map} $color1 - Cor base com propriedades color e percent
- * @param {color...} $colors - Lista de cores adicionais para misturar
- * @return {color} Cor resultante da mistura
- */
-// @function mix($color1, $color2, $weight){}
+/// Mistura múltiplas cores
+/// @param {Map} $color1 [(black, 0%)] - Cor base com propriedades color e percent
+/// @param {List} $colors - Lista de cores adicionais para misturar
+/// @return {Color} Cor resultante da mistura
+/// @example scss
+///   mix(#ff0000, #0000ff, 50%) => #800080
+///
 @function mix($color1: (black, 0%), $colors...) {
   @if length($colors) >= 2 {
     $second: nth($colors, 1);
@@ -30,28 +30,36 @@
   @return null;
 }
 
+/// Inverte uma cor
+/// @param {Color} $color - Cor a ser invertida
+/// @return {Color} Cor invertida
+/// @example scss
+///   invert(#ffffff) => #000000
+///
 @function invert($color) {
   @return color.invert($color);
 }
 
-/* 
- * Função que multiplica duas cores RGB
- * @param {color} $rgb1 - Primeira cor RGB
- * @param {color} $rgb2 - Segunda cor RGB
- * @return {color} Nova cor RGB resultante da multiplicação
- */
- @function multiply($rgb1, $rgb2) {
+/// Multiplica duas cores RGB
+/// @param {Color} $rgb1 - Primeira cor RGB
+/// @param {Color} $rgb2 - Segunda cor RGB
+/// @return {Color} Nova cor RGB resultante da multiplicação
+/// @example scss
+///   multiply(#ff0000, #0000ff) => #000000
+///
+@function multiply($rgb1, $rgb2) {
   $r: floor(div(channel($rgb1, "red", $space: rgb)    * channel($rgb2, "red", $space: rgb), 255));
   $g: floor(div(channel($rgb1, "green", $space: rgb)  * channel($rgb2, "green", $space: rgb), 255));
   $b: floor(div(channel($rgb1, "blue", $space: rgb)   * channel($rgb2, "blue", $space: rgb), 255));
   @return rgb($r, $g, $b);
 }
 
-/* 
- * Função que calcula o brilho de uma cor
- * @param {color} $color - Cor para calcular o brilho
- * @return {number} Valor do brilho (0-255)
- */
+/// Calcula o brilho de uma cor
+/// @param {Color} $color - Cor para calcular o brilho
+/// @return {Number} Valor do brilho (0-255)
+/// @example scss
+///   getBrightness(#ffffff) => 255
+///
 @function getBrightness($color) {
   @return div(
     channel($color, "red", $space: rgb) * 299 + 
@@ -60,21 +68,19 @@
     1000
   );
 }
-
-/* 
- * Função que verifica se uma cor é clara
- * @param {color} $color - Cor para verificar
- * @return {boolean} True se a cor for clara, False se for escura
- */
+ 
+/// Função que verifica se uma cor é clara
+/// @param {color} $color - Cor para verificar
+/// @return {boolean} True se a cor for clara, False se for escura
+///
 @function isLight($color) {
   @return getBrightness($color) >= 128;
 }
 
-/* 
- * Função que determina a cor de contraste ideal (preto ou branco)
- * @param {color} $color - Cor base para determinar o contraste
- * @return {color} #000 para cores claras, #fff para cores escuras
- */
+///Função que determina a cor de contraste ideal (preto ou branco)
+///@param {color} $color - Cor base para determinar o contraste
+///@return {color} #000 para cores claras, #fff para cores escuras
+///
 @function getContrast($color) {
   @if isLight($color) {
     @return #000;
@@ -83,6 +89,13 @@
   }
 }
 
+/// Cria uma paleta de cores gradiente
+/// @param {Color} $baseColor [red] - Cor base para o gradiente
+/// @param {List} $keys [(0,25,50,75,100)] - Lista de pontos do gradiente
+/// @return {Map} Mapa com as cores do gradiente
+/// @example scss
+///   gradiant(#ff0000) => (0: #800000, 25: #bf0000, 50: #ff0000, 75: #ff8080, 100: #ffffff)
+///
 @function gradiant($baseColor: red, $keys: (0,25,50,75,100)) {
   $white: #fff;
   $black: #000000;
@@ -106,6 +119,14 @@
   @return $palette;
 }
 
+/// Obtém um canal específico de uma cor
+/// @param {Color} $color [white] - Cor para extrair o canal
+/// @param {String} $type ["red"] - Canal a ser extraído ('red', 'green' ou 'blue')
+/// @param {String} $space [rgb] - Espaço de cor a ser usado
+/// @return {Number} Valor do canal especificado
+/// @example scss
+///   channel(#ff0000, "red") => 255
+///
 @function channel(
   $color: white, 
   $type:  "red", 
